# enum-conversion

./: Cargo.toml  Makefile  README.md
enum-conversion-derive/: Cargo.toml
enum-conversion-derive/src/: impls.rs  lib.rs  parse_attributes.rs  parse_enum.rs  templates.rs
enum-conversion-traits/: Cargo.toml
enum-conversion-traits/src/: lib.rs
src/: lib.rs
tests/: tests.rs
tests/uncompilable_examples/: foreign_types.rs  foreign_types.stderr  generics_collision.rs  generics_collision.stderr
