[package]
name = "enum-conversion"
version = "0.0.1"
edition = "2021"
authors = ["Jacob Turner <jacob@friendrat.com> "]
readme = "README.md"
description = "A set of traits and macros for deriving conversion traits between enums and the types in their variants."
license = "GNU General Public Licence v3.0"
categories = ["development-tools", "rust-patterns"]
build = false


[workspace]
members = [
    "enum-conversion-derive",
    "enum-conversion-traits",
]

[dependencies]
syn = {version= "1.0.103", features=["derive", "extra-traits"]}
enum-conversion-derive = {path = "enum-conversion-derive"}
enum-conversion-traits = {path = "enum-conversion-traits"}

[dev-dependencies]
trybuild = "1.0.40"