[package]
name = "enum-conversion"
version = "0.0.1"
edition = "2021"
authors = ["Jacob Turner <jacob@friendrat.com> "]
readme = "README.md"
description = "A set of traits and macros for deriving conversion traits between enums and the types in their variants."
license = "GPL-2.0-or-later"
categories = ["development-tools", "rust-patterns"]
build = false


[workspace]
members = [
    "enum-conversion-derive",
    "enum-conversion-traits",
]

[dependencies]
syn = {version= "1.0.103", features=["derive", "extra-traits"]}
enum-conversion-derive = "0.0.1"
enum-conversion-traits = "0.0.1"

[dev-dependencies]
trybuild = "1.0.40"