[package]
name = "enum-conversion-derive"
version = "0.0.1"
authors = ["Jacob Turner <jacob@friendrat.com> "]
edition = "2021"
readme = "../README.md"
description = "Prodedural macros for deriving From and TryFrom traits on enums."
repository = "hhttps://github.com/friendrat/enum-conversion-derive"
homepage = "https://github.com/friendrat/enum-conversion-derive"
license = "GNU General Public License v3.0"
categories = ["development-tools", "rust-patterns"]
build = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
syn = {version= "1.0", features=["full", "extra-traits"]}
quote = "1.0"
tera = "1"
lazy_static = "1"
enum-conversion-traits = { path = "../enum-conversion-traits" }