[package]
name = "enum-conversion-traits"
version = "0.0.1"
authors = ["Jacob Turner <jacob@friendrat.com> "]
edition = "2021"
readme = "../README.md"
description = "Traits for converting between enums and the types and their variants."
repository = "https://github.com/friendrat/enum-conversion-derive"
homepage = "https://github.com/friendrat/enum-conversion-derive"
license = "GNU General Public License v3.0"
categories = ["development-tools", "rust-patterns"]
build = false

[lib]

[dependencies]
